Update Kaggle CSV Extraction.ipynb

--- a/Kaggle CSV Extraction.ipynb
+++ b/Kaggle CSV Extraction.ipynb
@@ -303,18 +303,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "23119db2",
+   "execution_count": 30,
+   "id": "f64026b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vg_sales_df.rename(columns = {'Genre':'genre'}, inplace = True)"
+    "vg_sales_df.rename(columns = {'Title':'title','Genre':'genre', 'Platform': 'platform', 'Year':'release_date'}, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1d2cd96a",
+   "execution_count": 31,
+   "id": "398352b3",
    "metadata": {},
    "outputs": [
     {
@@ -327,9 +327,9 @@
       " #   Column        Non-Null Count  Dtype  \n",
       "---  ------        --------------  -----  \n",
       " 0   Rank          16598 non-null  int64  \n",
-      " 1   Name          16598 non-null  object \n",
-      " 2   Platform      16598 non-null  object \n",
-      " 3   Year          16327 non-null  float64\n",
+      " 1   title         16598 non-null  object \n",
+      " 2   platform      16598 non-null  object \n",
+      " 3   release_date  16327 non-null  float64\n",
       " 4   genre         16598 non-null  object \n",
       " 5   Publisher     16540 non-null  object \n",
       " 6   NA_Sales      16598 non-null  float64\n",
@@ -348,8 +348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "28b8c764",
+   "execution_count": 32,
+   "id": "f1a56884",
    "metadata": {},
    "outputs": [
     {
@@ -374,9 +374,9 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Rank</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Platform</th>\n",
-       "      <th>Year</th>\n",
+       "      <th>title</th>\n",
+       "      <th>platform</th>\n",
+       "      <th>release_date</th>\n",
        "      <th>genre</th>\n",
        "      <th>Publisher</th>\n",
        "      <th>NA_Sales</th>\n",
@@ -462,22 +462,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   Rank                      Name Platform    Year         genre Publisher  \\\n",
-       "0     1                Wii Sports      Wii  2006.0        Sports  Nintendo   \n",
-       "1     2         Super Mario Bros.      NES  1985.0      Platform  Nintendo   \n",
-       "2     3            Mario Kart Wii      Wii  2008.0        Racing  Nintendo   \n",
-       "3     4         Wii Sports Resort      Wii  2009.0        Sports  Nintendo   \n",
-       "4     5  Pokemon Red/Pokemon Blue       GB  1996.0  Role-Playing  Nintendo   \n",
+       "   Rank                     title platform  release_date         genre  \\\n",
+       "0     1                Wii Sports      Wii        2006.0        Sports   \n",
+       "1     2         Super Mario Bros.      NES        1985.0      Platform   \n",
+       "2     3            Mario Kart Wii      Wii        2008.0        Racing   \n",
+       "3     4         Wii Sports Resort      Wii        2009.0        Sports   \n",
+       "4     5  Pokemon Red/Pokemon Blue       GB        1996.0  Role-Playing   \n",
        "\n",
-       "   NA_Sales  EU_Sales  JP_Sales  Other_Sales  Global_Sales  \n",
-       "0     41.49     29.02      3.77         8.46         82.74  \n",
-       "1     29.08      3.58      6.81         0.77         40.24  \n",
-       "2     15.85     12.88      3.79         3.31         35.82  \n",
-       "3     15.75     11.01      3.28         2.96         33.00  \n",
-       "4     11.27      8.89     10.22         1.00         31.37  "
+       "  Publisher  NA_Sales  EU_Sales  JP_Sales  Other_Sales  Global_Sales  \n",
+       "0  Nintendo     41.49     29.02      3.77         8.46         82.74  \n",
+       "1  Nintendo     29.08      3.58      6.81         0.77         40.24  \n",
+       "2  Nintendo     15.85     12.88      3.79         3.31         35.82  \n",
+       "3  Nintendo     15.75     11.01      3.28         2.96         33.00  \n",
+       "4  Nintendo     11.27      8.89     10.22         1.00         31.37  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,8 +488,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "7a4874d7",
+   "execution_count": 46,
+   "id": "d468d808",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "id": "da34f6f1",
    "metadata": {},
    "outputs": [
@@ -510,7 +510,7 @@
        "       'Strategy'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "0dd3471f",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
        "11      Strategy"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,22 +632,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "id": "d6942190",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['Wii', 'NES', 'GB', 'DS', 'X360', 'PS3', 'PS2', 'SNES', 'GBA',\n",
-       "       '3DS', 'PS4', 'N64', 'PS', 'XB', 'PC', '2600', 'PSP', 'XOne', 'GC',\n",
-       "       'WiiU', 'GEN', 'DC', 'PSV', 'SAT', 'SCD', 'WS', 'NG', 'TG16',\n",
-       "       '3DO', 'GG', 'PCFX'], dtype=object)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'Platform'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23528/2469566636.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplatform_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvg_sales_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPlatform\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mplatform_list\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5485\u001b[0m         ):\n\u001b[0;32m   5486\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5487\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5488\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5489\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'Platform'"
+     ]
     }
    ],
    "source": [
@@ -657,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "1774a721",
    "metadata": {},
    "outputs": [
@@ -849,7 +848,7 @@
        "30     PCFX"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "c55874c5",
    "metadata": {},
    "outputs": [
@@ -887,7 +886,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
+       "      <th>title</th>\n",
        "      <th>Rank</th>\n",
        "      <th>NA_Sales</th>\n",
        "      <th>EU_Sales</th>\n",
@@ -1013,7 +1012,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                   Name   Rank  NA_Sales  \\\n",
+       "                                                  title   Rank  NA_Sales  \\\n",
        "0                                            Wii Sports      1     41.49   \n",
        "1                                     Super Mario Bros.      2     29.08   \n",
        "2                                        Mario Kart Wii      3     15.85   \n",
@@ -1042,7 +1041,7 @@
        "[16598 rows x 7 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "id": "6e39bc6a",
    "metadata": {},
    "outputs": [
@@ -1082,9 +1081,9 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Rank</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Platform</th>\n",
-       "      <th>Year</th>\n",
+       "      <th>title</th>\n",
+       "      <th>platform</th>\n",
+       "      <th>release_date</th>\n",
        "      <th>genre</th>\n",
        "      <th>Publisher</th>\n",
        "      <th>NA_Sales</th>\n",
@@ -1255,7 +1254,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        Rank                                              Name Platform  \\\n",
+       "        Rank                                             title platform  \\\n",
        "23        24                                Grand Theft Auto V     X360   \n",
        "35        36                        Call of Duty: Black Ops II     X360   \n",
        "37        38                    Call of Duty: Modern Warfare 3      PS3   \n",
@@ -1268,47 +1267,47 @@
        "16595  16598  SCORE International Baja 1000: The Official Game      PS2   \n",
        "16597  16600                                  Spirits & Spells      GBA   \n",
        "\n",
-       "         Year      genre             Publisher  NA_Sales  EU_Sales  JP_Sales  \\\n",
-       "23     2013.0     Action  Take-Two Interactive      9.63      5.31      0.06   \n",
-       "35     2012.0    Shooter            Activision      8.25      4.30      0.07   \n",
-       "37     2011.0    Shooter            Activision      5.54      5.82      0.49   \n",
-       "40     2010.0    Shooter            Activision      5.98      4.44      0.48   \n",
-       "44     2014.0     Action  Take-Two Interactive      3.80      5.81      0.36   \n",
-       "...       ...        ...                   ...       ...       ...       ...   \n",
-       "16586  2009.0  Adventure           Deep Silver      0.00      0.01      0.00   \n",
-       "16591  2004.0  Adventure               Ubisoft      0.01      0.00      0.00   \n",
-       "16594  2003.0    Shooter            Infogrames      0.01      0.00      0.00   \n",
-       "16595  2008.0     Racing            Activision      0.00      0.00      0.00   \n",
-       "16597  2003.0   Platform               Wanadoo      0.01      0.00      0.00   \n",
+       "       release_date      genre             Publisher  NA_Sales  EU_Sales  \\\n",
+       "23           2013.0     Action  Take-Two Interactive      9.63      5.31   \n",
+       "35           2012.0    Shooter            Activision      8.25      4.30   \n",
+       "37           2011.0    Shooter            Activision      5.54      5.82   \n",
+       "40           2010.0    Shooter            Activision      5.98      4.44   \n",
+       "44           2014.0     Action  Take-Two Interactive      3.80      5.81   \n",
+       "...             ...        ...                   ...       ...       ...   \n",
+       "16586        2009.0  Adventure           Deep Silver      0.00      0.01   \n",
+       "16591        2004.0  Adventure               Ubisoft      0.01      0.00   \n",
+       "16594        2003.0    Shooter            Infogrames      0.01      0.00   \n",
+       "16595        2008.0     Racing            Activision      0.00      0.00   \n",
+       "16597        2003.0   Platform               Wanadoo      0.01      0.00   \n",
        "\n",
-       "       Other_Sales  Global_Sales  \n",
-       "23            1.38         16.38  \n",
-       "35            1.12         13.73  \n",
-       "37            1.62         13.46  \n",
-       "40            1.83         12.73  \n",
-       "44            2.02         11.98  \n",
-       "...            ...           ...  \n",
-       "16586         0.00          0.01  \n",
-       "16591         0.00          0.01  \n",
-       "16594         0.00          0.01  \n",
-       "16595         0.00          0.01  \n",
-       "16597         0.00          0.01  \n",
+       "       JP_Sales  Other_Sales  Global_Sales  \n",
+       "23         0.06         1.38         16.38  \n",
+       "35         0.07         1.12         13.73  \n",
+       "37         0.49         1.62         13.46  \n",
+       "40         0.48         1.83         12.73  \n",
+       "44         0.36         2.02         11.98  \n",
+       "...         ...          ...           ...  \n",
+       "16586      0.00         0.00          0.01  \n",
+       "16591      0.00         0.00          0.01  \n",
+       "16594      0.00         0.00          0.01  \n",
+       "16595      0.00         0.00          0.01  \n",
+       "16597      0.00         0.00          0.01  \n",
        "\n",
        "[5105 rows x 11 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vg_sales_df[vg_sales_df[\"Name\"].duplicated()]"
+    "vg_sales_df[vg_sales_df[\"title\"].duplicated()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "id": "2d4236cb",
    "metadata": {},
    "outputs": [
@@ -1333,8 +1332,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Platform</th>\n",
+       "      <th>title</th>\n",
+       "      <th>platform</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1399,7 +1398,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                   Name Platform\n",
+       "                                                  title platform\n",
        "0                                            Wii Sports      Wii\n",
        "1                                     Super Mario Bros.      NES\n",
        "2                                        Mario Kart Wii      Wii\n",
@@ -1415,7 +1414,7 @@
        "[16598 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "5e1681d4",
    "metadata": {},
    "outputs": [
@@ -1454,7 +1453,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
+       "      <th>title</th>\n",
        "      <th>genre</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1520,7 +1519,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                   Name         genre\n",
+       "                                                  title         genre\n",
        "0                                            Wii Sports        Sports\n",
        "1                                     Super Mario Bros.      Platform\n",
        "2                                        Mario Kart Wii        Racing\n",
@@ -1536,7 +1535,7 @@
        "[16598 rows x 2 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1550,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "id": "d693b739",
    "metadata": {},
    "outputs": [
@@ -1575,7 +1574,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
+       "      <th>title</th>\n",
        "      <th>genre</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1641,7 +1640,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                   Name      genre\n",
+       "                                                  title      genre\n",
        "23                                   Grand Theft Auto V     Action\n",
        "35                           Call of Duty: Black Ops II    Shooter\n",
        "37                       Call of Duty: Modern Warfare 3    Shooter\n",
@@ -1657,18 +1656,18 @@
        "[5105 rows x 2 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vg_game_genre_csv[vg_game_genre_csv[\"Name\"].duplicated()]"
+    "vg_game_genre_csv[vg_game_genre_csv[\"title\"].duplicated()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "id": "3f77e9ed",
    "metadata": {},
    "outputs": [
@@ -1693,7 +1692,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
+       "      <th>title</th>\n",
        "      <th>genre</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1759,7 +1758,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                    Name         genre\n",
+       "                                                   title         genre\n",
        "0                                             Wii Sports        Sports\n",
        "1                                      Super Mario Bros.      Platform\n",
        "2                                         Mario Kart Wii        Racing\n",
@@ -1775,13 +1774,13 @@
        "[11493 rows x 2 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vg_game_genre_csv.drop_duplicates(\"Name\")"
+    "vg_game_genre_csv.drop_duplicates(\"title\")"
    ]
   },
   {
