--- a/P2/Project2-BusinessInsider.ipynb
+++ b/P2/Project2-BusinessInsider.ipynb
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "30ab43c4",
+   "id": "9c421060",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15c19364",
+   "id": "7dfda140",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "efb525f5",
+   "id": "a6033e40",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "232b62d7",
+   "id": "7dc237f2",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "735c5e3c",
+   "id": "6f093afd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d72defe6",
+   "id": "899b401b",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "c8308057",
+   "id": "400d5054",
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "cf985461",
+   "id": "4ce2e24c",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 106,
+   "id": "1335a838",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Platform</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PS4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>XOne</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PS3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>X360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>PS2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>XB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>GBA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>GC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>N64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>SNES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>PSP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>PS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>WiiU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Wii</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>DC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>3DS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Platform\n",
+       "0        PC\n",
+       "1       PS4\n",
+       "2      XOne\n",
+       "3       PS3\n",
+       "4      X360\n",
+       "5       PS2\n",
+       "6        XB\n",
+       "7       GBA\n",
+       "8        GC\n",
+       "9       N64\n",
+       "10     SNES\n",
+       "11      PSP\n",
+       "12       PS\n",
+       "13     WiiU\n",
+       "14      Wii\n",
+       "15       DC\n",
+       "16      3DS"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "platform = merge[\"Platform\"].unique()\n",
+    "df_platform = pd.DataFrame(platform, columns=['Platform'])\n",
+    "df_platform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "963b6d36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_platform.to_csv(\"platforms.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "id": "23ca35c2",
    "metadata": {},
    "outputs": [
@@ -1460,14 +1605,13 @@
        "16      3DS           16"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "platform = merge[\"Platform\"].unique()\n",
-    "df_platform = pd.DataFrame(platform, columns=['Platform'])\n",
+    "\n",
     "df_platform[\"platform_id\"] = np.arange(len(df_platform))\n",
     "df_platform\n",
     "#summ_table3 = pd.concat([gender_count, gender_perc], axis=1)\n",
@@ -1476,18 +1620,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "edec5c57",
+   "execution_count": 109,
+   "id": "06033fd4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_platform.to_csv(\"platforms.csv\", index=False)"
+    "df_platform.to_csv(\"platforms_id.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "b29e1b8f",
+   "id": "a4dd5097",
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "1a2e6163",
+   "id": "8c6354d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,7 +1661,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "29e983f5",
+   "id": "a70ad32c",
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1810,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "413f8a6d",
+   "id": "5033d2fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1676,7 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "7b586426",
+   "id": "ca26c758",
    "metadata": {},
    "outputs": [
     {
@@ -1759,7 +1903,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "1d113d09",
+   "id": "3733e354",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1769,7 +1913,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "807a2f98",
+   "id": "f9cc41db",
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +2150,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "0a718dde",
+   "id": "0613ac6a",
    "metadata": {},
    "outputs": [
     {
@@ -2029,7 +2173,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "b533fdf3",
+   "id": "e44f0854",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2040,7 +2184,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "8bdf3207",
+   "id": "9ff58301",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2050,7 +2194,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "cf1efc93",
+   "id": "2f614cf0",
    "metadata": {},
    "outputs": [
     {
@@ -2095,7 +2239,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "00ce529e",
+   "id": "b3f0cee9",
    "metadata": {},
    "outputs": [
     {
@@ -2208,7 +2352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2592a00",
+   "id": "6e5229d9",
    "metadata": {},
    "outputs": [],
    "source": []
