Write up and rename ipynb file

--- a/data manipulation and load for Genre, platforms, and videogame tables.ipynb
+++ b/data manipulation and load for Genre, platforms, and videogame tables.ipynb
@@ -21,6 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# read in vgsales kaggle csv\n",
     "df = pd.read_csv(\"Resources/vgsales.csv\")"
    ]
   },
@@ -273,6 +274,7 @@
     }
    ],
    "source": [
+    "# remove the second index column\n",
     "df.reset_index(drop = True)"
    ]
   },
@@ -283,8 +285,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "games = ['World of Goo', 'Metal Gear Solid V: The Phantom Pain', 'Portal 2', 'Persona 5 Royal', 'Madden NFL 2003', 'The Last of Us', \"The Legend of Zelda: Majora's Mask\", 'The Legend of Zelda: A Link to the Past', 'Halo 2', 'Gran Turismo 3: A-Spec', 'Red Dead Redemption', \"The Legend of Zelda: Collector's Edition\", 'LittleBigPlanet', 'Grand Theft Auto: Vice City', 'Grand Theft Auto: San Andreas', \"Baldur's Gate II: Shadows of Amn\", 'Metal Gear Solid 2: Sons of Liberty', 'Gran Turismo', 'The Legend of Zelda: The Wind Waker', 'Half-Life', 'The Elder Scrolls V: Skyrim', 'The Legend of Zelda: Twilight Princess', 'The House in Fata Morgana - Dreams of the Reve', 'Mass Effect 2', 'Tekken 3', 'Batman: Arkham City', 'The Orange Box', 'Resident Evil 4', 'Uncharted 2: Among Thieves', 'GoldenEye 007', 'BioShock', 'Half-Life 2', 'NFL 2K1', 'Elden Ring', 'Halo: Combat Evolved', 'Super Mario Odyssey', 'Grand Theft Auto III', 'Metroid Prime', 'Perfect Dark', \"Tony Hawk's Pro Skater 3\", 'The Legend of Zelda: Breath of the Wild', 'Disco Elysium: The Final Cut', 'Grand Theft Auto V', 'Red Dead Redemption 2', 'Super Mario Galaxy 2', 'Super Mario Galaxy','SoulCalibur', 'Grand Theft Auto IV', \"Tony Hawk's Pro Skater 2\", 'The Legend of Zelda: Ocarina of Time']\n",
-    "\n"
+    "# list the games that we need to pulll based on the Business Insider web scrape\n",
+    "games = ['World of Goo', 'Metal Gear Solid V: The Phantom Pain', 'Portal 2', 'Persona 5 Royal', 'Madden NFL 2003', 'The Last of Us', \"The Legend of Zelda: Majora's Mask\", 'The Legend of Zelda: A Link to the Past', 'Halo 2', 'Gran Turismo 3: A-Spec', 'Red Dead Redemption', \"The Legend of Zelda: Collector's Edition\", 'LittleBigPlanet', 'Grand Theft Auto: Vice City', 'Grand Theft Auto: San Andreas', \"Baldur's Gate II: Shadows of Amn\", 'Metal Gear Solid 2: Sons of Liberty', 'Gran Turismo', 'The Legend of Zelda: The Wind Waker', 'Half-Life', 'The Elder Scrolls V: Skyrim', 'The Legend of Zelda: Twilight Princess', 'The House in Fata Morgana - Dreams of the Reve', 'Mass Effect 2', 'Tekken 3', 'Batman: Arkham City', 'The Orange Box', 'Resident Evil 4', 'Uncharted 2: Among Thieves', 'GoldenEye 007', 'BioShock', 'Half-Life 2', 'NFL 2K1', 'Elden Ring', 'Halo: Combat Evolved', 'Super Mario Odyssey', 'Grand Theft Auto III', 'Metroid Prime', 'Perfect Dark', \"Tony Hawk's Pro Skater 3\", 'The Legend of Zelda: Breath of the Wild', 'Disco Elysium: The Final Cut', 'Grand Theft Auto V', 'Red Dead Redemption 2', 'Super Mario Galaxy 2', 'Super Mario Galaxy','SoulCalibur', 'Grand Theft Auto IV', \"Tony Hawk's Pro Skater 2\", 'The Legend of Zelda: Ocarina of Time']\n"
    ]
   },
   {
@@ -294,6 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pull the games from the CSV using the list and drop un-needed columns\n",
     "games_df = df.loc[df['Name'].isin(games), ['Name', 'Platform', 'Year', 'Genre', 'Global_Sales']].reset_index(drop = True)\n"
    ]
   },
@@ -458,6 +461,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# read in the BI web scraped CSV\n",
     "df2 = pd.read_csv(\"Resources/business_i.csv\")"
    ]
   },
@@ -920,6 +924,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# merge the BI CSV with the cleaned vgsales CSV\n",
     "df_merge = pd.merge(games_df, df2, on='Name')\n",
     "df_merge.to_csv('game_sales.csv', index = False)"
    ]
@@ -1143,6 +1148,7 @@
     }
    ],
    "source": [
+    "# Pull the platforms columns\n",
     "platforms = df_merge.copy()\n",
     "platforms"
    ]
@@ -1154,6 +1160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# remove the duplicate consoles and save off to CSV\n",
     "platform_df = platforms.Platform\n",
     "plat = platform_df.drop_duplicates(keep='first', inplace=False).reset_index(drop = True).to_csv(\"platform.csv\", index = False)\n",
     "plat"
@@ -1162,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "1b508eab",
+   "id": "9563a7f0",
    "metadata": {},
    "outputs": [
     {
@@ -1185,6 +1192,7 @@
     }
    ],
    "source": [
+    "# isolate the genre column from the merge and save off as CSV\n",
     "genres = df_merge.Genre.drop_duplicates(keep = 'first', inplace = False).reset_index(drop = True)\n",
     "genres"
    ]
@@ -1192,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a55c1ccb",
+   "id": "d458f894",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,27 +1209,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0c4cf78e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db869225",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "id": "5f068a44",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# connect to postgres (pgadmin) server\n",
     "HOSTNAME = \"35.224.199.242\"\n",
     "PORT = 5432\n",
     "DATABASE = \"postgres\"\n",
@@ -1232,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e669236d",
+   "id": "a0019929",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "3ee2d0ec",
+   "id": "423d1257",
    "metadata": {},
    "outputs": [
     {
@@ -1271,23 +1264,25 @@
     }
    ],
    "source": [
+    "# test engine to see if it works\n",
     "engine.table_names()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "17b0037b",
+   "id": "aaaafe86",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import genre csv into the genres table\n",
     "genres = pd.read_csv(\"genres.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "085a4121",
+   "id": "ca9e500e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a2d64200",
+   "id": "5fdc551e",
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "333af1f0",
+   "id": "185e9202",
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1505,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2d1fee5e",
+   "id": "852f2f53",
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133074a9",
+   "id": "a0a209ad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1603,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f2469eb",
+   "id": "e47a2a71",
    "metadata": {},
    "outputs": [],
    "source": []
