--- a/P2/Data_Queries.ipynb
+++ b/P2/Data_Queries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "id": "f28f661b",
    "metadata": {},
    "outputs": [],
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "77ccee5b",
+   "execution_count": 57,
+   "id": "8233482e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,15 +27,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "b217c4aa",
+   "execution_count": 58,
+   "id": "5bcdb540",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-50-d72bc75a6b62>:1: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
+      "<ipython-input-58-d72bc75a6b62>:1: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
       "  engine.table_names()\n"
      ]
     },
@@ -52,7 +52,7 @@
        " 'platform_list']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "2fb5c473",
+   "id": "5de3f95a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "d809d927",
+   "id": "4853cff3",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "7369640f",
+   "id": "49814179",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e37568f4",
+   "id": "6380d817",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,8 +452,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "6b1c0914",
+   "execution_count": 60,
+   "id": "3079713c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_sql(name='videogame', con=engine, if_exists='append', index=False, method=\"multi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "89dfb79a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 93 entries, 0 to 92\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column        Non-Null Count  Dtype         \n",
+      "---  ------        --------------  -----         \n",
+      " 0   id            93 non-null     int64         \n",
+      " 1   name          93 non-null     object        \n",
+      " 2   critic_score  93 non-null     int64         \n",
+      " 3   user_score    93 non-null     float64       \n",
+      " 4   year          93 non-null     float64       \n",
+      " 5   global_sales  93 non-null     float64       \n",
+      " 6   game_id       93 non-null     int64         \n",
+      " 7   last_update   93 non-null     datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), float64(3), int64(3), object(1)\n",
+      "memory usage: 5.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "games_df = pd.read_sql(\"Select * from videogame\", con=engine)\n",
+    "games_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "f63f3eeb",
    "metadata": {},
    "outputs": [
     {
@@ -478,185 +521,139 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
-       "      <th>name</th>\n",
        "      <th>platform</th>\n",
-       "      <th>year</th>\n",
-       "      <th>genre</th>\n",
-       "      <th>global_sales</th>\n",
-       "      <th>critic_score</th>\n",
-       "      <th>user_score</th>\n",
-       "      <th>last_updated</th>\n",
+       "      <th>last_update</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>Grand Theft Auto V</td>\n",
-       "      <td>PS3</td>\n",
-       "      <td>2013.0</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>21.40</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>2022-03-22 02:37:36.232415</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>Grand Theft Auto V</td>\n",
-       "      <td>X360</td>\n",
-       "      <td>2013.0</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>16.38</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>2022-03-22 02:37:36.232415</td>\n",
+       "      <td>PS4</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>Grand Theft Auto V</td>\n",
-       "      <td>PS4</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>11.98</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>2022-03-22 02:37:36.232415</td>\n",
+       "      <td>XOne</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>Grand Theft Auto V</td>\n",
-       "      <td>XOne</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>5.08</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>2022-03-22 02:37:36.232415</td>\n",
+       "      <td>PS3</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>Grand Theft Auto V</td>\n",
-       "      <td>PC</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>1.08</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>2022-03-22 02:37:36.232415</td>\n",
+       "      <td>X360</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>PS2</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>89</td>\n",
-       "      <td>The Orange Box</td>\n",
-       "      <td>PS3</td>\n",
-       "      <td>2007.0</td>\n",
-       "      <td>Shooter</td>\n",
-       "      <td>1.08</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>9.2</td>\n",
-       "      <td>2022-03-22 02:37:36.232415</td>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>XB</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89</th>\n",
-       "      <td>90</td>\n",
-       "      <td>The Orange Box</td>\n",
-       "      <td>PC</td>\n",
-       "      <td>2007.0</td>\n",
-       "      <td>Shooter</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>9.2</td>\n",
-       "      <td>2022-03-22 02:37:36.232415</td>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>GBA</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>91</td>\n",
-       "      <td>NFL 2K1</td>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>GC</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>N64</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>SNES</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>PSP</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>PS</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>WiiU</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
        "      <td>DC</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>Sports</td>\n",
-       "      <td>1.09</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2022-03-22 02:37:36.232415</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>92</td>\n",
-       "      <td>SoulCalibur</td>\n",
-       "      <td>DC</td>\n",
-       "      <td>1999.0</td>\n",
-       "      <td>Fighting</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>8.6</td>\n",
-       "      <td>2022-03-22 02:37:36.232415</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>93</td>\n",
-       "      <td>World of Goo</td>\n",
-       "      <td>PC</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>Puzzle</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>8.8</td>\n",
-       "      <td>2022-03-22 02:37:36.232415</td>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>3DS</td>\n",
+       "      <td>2022-03-22 18:54:01.497374</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>93 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    id                name platform    year     genre  global_sales  \\\n",
-       "0    1  Grand Theft Auto V      PS3  2013.0    Action         21.40   \n",
-       "1    2  Grand Theft Auto V     X360  2013.0    Action         16.38   \n",
-       "2    3  Grand Theft Auto V      PS4  2014.0    Action         11.98   \n",
-       "3    4  Grand Theft Auto V     XOne  2014.0    Action          5.08   \n",
-       "4    5  Grand Theft Auto V       PC  2015.0    Action          1.08   \n",
-       "..  ..                 ...      ...     ...       ...           ...   \n",
-       "88  89      The Orange Box      PS3  2007.0   Shooter          1.08   \n",
-       "89  90      The Orange Box       PC  2007.0   Shooter          0.14   \n",
-       "90  91             NFL 2K1       DC  2000.0    Sports          1.09   \n",
-       "91  92         SoulCalibur       DC  1999.0  Fighting          0.34   \n",
-       "92  93        World of Goo       PC  2008.0    Puzzle          0.04   \n",
-       "\n",
-       "    critic_score  user_score               last_updated  \n",
-       "0           96.0         7.8 2022-03-22 02:37:36.232415  \n",
-       "1           96.0         7.8 2022-03-22 02:37:36.232415  \n",
-       "2           96.0         7.8 2022-03-22 02:37:36.232415  \n",
-       "3           96.0         7.8 2022-03-22 02:37:36.232415  \n",
-       "4           96.0         7.8 2022-03-22 02:37:36.232415  \n",
-       "..           ...         ...                        ...  \n",
-       "88          96.0         9.2 2022-03-22 02:37:36.232415  \n",
-       "89          96.0         9.2 2022-03-22 02:37:36.232415  \n",
-       "90          97.0         6.3 2022-03-22 02:37:36.232415  \n",
-       "91          98.0         8.6 2022-03-22 02:37:36.232415  \n",
-       "92          94.0         8.8 2022-03-22 02:37:36.232415  \n",
-       "\n",
-       "[93 rows x 9 columns]"
+       "    id platform                last_update\n",
+       "0    1       PC 2022-03-22 18:54:01.497374\n",
+       "1    2      PS4 2022-03-22 18:54:01.497374\n",
+       "2    3     XOne 2022-03-22 18:54:01.497374\n",
+       "3    4      PS3 2022-03-22 18:54:01.497374\n",
+       "4    5     X360 2022-03-22 18:54:01.497374\n",
+       "5    6      PS2 2022-03-22 18:54:01.497374\n",
+       "6    7       XB 2022-03-22 18:54:01.497374\n",
+       "7    8      GBA 2022-03-22 18:54:01.497374\n",
+       "8    9       GC 2022-03-22 18:54:01.497374\n",
+       "9   10      N64 2022-03-22 18:54:01.497374\n",
+       "10  11     SNES 2022-03-22 18:54:01.497374\n",
+       "11  12      PSP 2022-03-22 18:54:01.497374\n",
+       "12  13       PS 2022-03-22 18:54:01.497374\n",
+       "13  14     WiiU 2022-03-22 18:54:01.497374\n",
+       "14  15      Wii 2022-03-22 18:54:01.497374\n",
+       "15  16       DC 2022-03-22 18:54:01.497374\n",
+       "16  17      3DS 2022-03-22 18:54:01.497374"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +663,7 @@
     "        Select\n",
     "            *\n",
     "        From\n",
-    "            videogames;\n",
+    "            platform_list;\n",
     "        \"\"\"\n",
     "\n",
     "df = pd.read_sql(query2, conn)\n",
@@ -676,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6f2f9272",
+   "id": "c329b070",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "eb7a7d4a",
+   "id": "701edbcd",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "04390a07",
+   "id": "49cd4a75",
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "793ac0f2",
+   "id": "dde26a36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7d358600",
+   "id": "21cb3fd5",
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "add4c476",
+   "id": "888d3c07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "215dd5ff",
+   "id": "0cbdbce3",
    "metadata": {},
    "outputs": [],
    "source": []
