added schema to repo

--- a/data manipulation and load for Genre, platforms, and videogame tables.ipynb
+++ b/data manipulation and load for Genre, platforms, and videogame tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "e8b91fe0",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "0ed56024",
    "metadata": {},
    "outputs": [],
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "5f068a44",
    "metadata": {},
    "outputs": [],
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "a0019929",
    "metadata": {},
    "outputs": [],
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "423d1257",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/6m/cq811jws6_76rhtzmz7w7m9c0000gn/T/ipykernel_71905/4162273999.py:1: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
+      "/var/folders/6m/cq811jws6_76rhtzmz7w7m9c0000gn/T/ipykernel_83003/1339351410.py:2: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
       "  engine.table_names()\n"
      ]
     },
@@ -1253,12 +1253,14 @@
        "['GameGenres',\n",
        " 'GamesReleasedPlatforms',\n",
        " 'videogames',\n",
+       " 'genre_junc',\n",
+       " 'platform_junc',\n",
+       " 'genre_id',\n",
        " 'platforms',\n",
-       " 'genres',\n",
-       " 'genre']"
+       " 'all_games']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
